added test to evaluation

--- a/Week3/AssignmentWeek3.ipynb
+++ b/Week3/AssignmentWeek3.ipynb
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "id": "12c14028",
    "metadata": {
     "deletable": false,
@@ -1123,41 +1123,201 @@
     "\n",
     "def recall(confusion_matrix, average): \n",
     "    assert average in [None, 'macro', 'micro', 'weighted']\n",
-    "    #WRITE YOUR CODE HERE\n",
+    "    recall = np.diagonal(confusion_matrix) / np.sum(confusion_matrix, axis= 0)\n",
+    "    \n",
+    "    if average == None:\n",
+    "        return recall\n",
+    "    \n",
+    "    if average == 'micro':\n",
+    "        return accuracy(confusion_matrix)\n",
+    "    \n",
+    "    if average == 'macro':\n",
+    "        return np.mean(recall)\n",
+    "    \n",
+    "    if average == 'weighted':\n",
+    "        weighted = 1 / np.sum(confusion_matrix, axis= 0)\n",
+    "        return np.sum(recall * weighted) / np.sum(confusion_matrix)\n",
     "    \n",
     "def f1(confusion_matrix, average):\n",
     "    assert average in [None, 'macro', 'micro', 'weighted']\n",
-    "    F1 = 0.0\n",
-    "    #WRITE YOUR CODE HERE\n",
-    "    return F1"
+    "    \n",
+    "    if average == None:\n",
+    "        numerator = precision(confusion_matrix, None) * recall(confusion_matrix, None)\n",
+    "        denominator = precision(confusion_matrix, None) + recall(confusion_matrix, None)\n",
+    "\n",
+    "        return np.nan_to_num(2 * (numerator / denominator))\n",
+    "    \n",
+    "    if average == 'macro':\n",
+    "        numerator = precision(confusion_matrix, None) * recall(confusion_matrix, None)\n",
+    "        denominator = precision(confusion_matrix, None) + recall(confusion_matrix, None)\n",
+    "\n",
+    "        return np.nan_to_num(np.mean(2 * (numerator / denominator)))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "8124ad93",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m<tokenize>:6\u001b[1;36m\u001b[0m\n\u001b[1;33m    if average == 'micro':\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if average == 'macro':\n",
+    "#         p = precision(confusion_matrix, None)\n",
+    "#         r = recall(confusion_matrix, None)\n",
+    "#         return np.nan_to_num(np.mean(2 * (p * r / (p + r))))\n",
+    "    \n",
+    "#     if average == 'micro':\n",
+    "#         return accuracy(confusion_matrix)\n",
+    "    \n",
+    "#     if average == 'weighted':\n",
+    "#         p = precision(confusion_matrix, None)\n",
+    "#         r = recall(confusion_matrix, None)\n",
+    "#         weighted = 1 / np.sum(confusion_matrix, axis=0)\n",
+    "#         return np.nan_to_num(np.sum(2 * (p * r / (p + r)) * weighted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "2ed6d437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-71-0d73df87ad90>:59: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return np.nan_to_num(np.mean(2 * (numerator / denominator)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 0.35144064834426747)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "item = 'macro'\n",
+    "f1(matrix, item), f1_score(test_y, y_pred, average=item)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
+   "id": "c8a0bd5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision None: [ True  True  True  True  True  True  True]\n",
+      "Recall None: [ True  True  True  True  True  True  True]\n",
+      "F1 None: [ True  True  True  True  True  True  True]\n",
+      "Precision macro: True\n",
+      "Recall macro: True\n",
+      "F1 macro: False\n",
+      "Precision micro: True\n",
+      "Recall micro: True\n",
+      "F1 micro: False\n",
+      "Precision weighted: False\n",
+      "Recall weighted: False\n",
+      "F1 weighted: False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-57-61539ee4e0c9>:53: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  return np.nan_to_num(2 * (numerator / denominator))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "average = [None, 'macro', 'micro', 'weighted']\n",
+    "\n",
+    "for item in average:\n",
+    "    print(\"Precision {}: {}\".format(item, precision(matrix, item) == precision_score(test_y, y_pred, average=item)))\n",
+    "    print(\"Recall {}: {}\".format(item, recall(matrix, item) == recall_score(test_y, y_pred, average=item)))\n",
+    "    print(\"F1 {}: {}\".format(item, f1(matrix, item) == f1_score(test_y, y_pred, average=item)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "11ba5d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision None: [ True  True  True  True  True  True  True]\n",
+      "Recall None: [ True  True  True  True  True  True  True]\n",
+      "F1 None: [ True  True  True False  True  True  True]\n",
+      "Precision macro: True\n",
+      "Recall macro: True\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-34-8cc524215591>:50: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  F1 = 2 * ((precision(confusion_matrix, None) * recall(confusion_matrix, None))\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'F1' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPrecision \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(item, precision(matrix, item) \u001b[38;5;241m==\u001b[39m precision_score(test_y, y_pred, average\u001b[38;5;241m=\u001b[39mitem)))\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRecall \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(item, recall(matrix, item) \u001b[38;5;241m==\u001b[39m recall_score(test_y, y_pred, average\u001b[38;5;241m=\u001b[39mitem)))\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mF1 \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(item, \u001b[43mf1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmatrix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mitem\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m f1_score(test_y, y_pred, average\u001b[38;5;241m=\u001b[39mitem)))\n",
+      "Cell \u001b[1;32mIn[34], line 53\u001b[0m, in \u001b[0;36mf1\u001b[1;34m(confusion_matrix, average)\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m average \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     50\u001b[0m     F1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m ((precision(confusion_matrix, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m*\u001b[39m recall(confusion_matrix, \u001b[38;5;28;01mNone\u001b[39;00m)) \n\u001b[0;32m     51\u001b[0m               \u001b[38;5;241m/\u001b[39m (precision(confusion_matrix, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m+\u001b[39m recall(confusion_matrix, \u001b[38;5;28;01mNone\u001b[39;00m)))\n\u001b[1;32m---> 53\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF1\u001b[49m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'F1' referenced before assignment"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "4336f504",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03596938775510204"
+       "0.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "test_matrix = np.array([[1, 2, 0],\n",
-    "                       [0, 3, 1],\n",
-    "                       [0, 5, 2]])\n",
-    "average = [None, 'macro', 'micro', 'weighted']\n",
-    "\n",
-    "# [precision(test_matrix, i) for i in average]\n",
-    "precision(test_matrix, 'weighted')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
