Machine Learning Baselines

--- a/Week3/AssignmentWeek3.ipynb
+++ b/Week3/AssignmentWeek3.ipynb
@@ -24,13 +24,13 @@
     "* je emails: hetzelfde: scheidt met `,`\n",
     "* voor je groep: **alleen de hoofdletter** (iets als  `A` of `B` dus)\n",
     "\n",
-    "__Namen__: \n",
+    "__Namen__: Tycho Stam,\n",
+    "    \n",
+    "__Emails__: tycho.stam@student.uva.nl,\n",
     "\n",
-    "__Emails__: \n",
+    "__Student ids__ : 13303147,\n",
     "\n",
-    "__Student ids__ : \n",
-    "\n",
-    "__Groep__ : VervangMijDoorEenHoofdletter"
+    "__Groep__ : B"
    ]
   },
   {
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "825cfc3d",
    "metadata": {
     "deletable": false,
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "c6d3025f",
    "metadata": {
     "deletable": false,
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "902885fc",
    "metadata": {
     "deletable": false,
@@ -1316,7 +1316,48 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision None: [ True  True  True  True  True  True  True]\n",
+      "Recall None: [ True  True  True  True  True  True  True]\n",
+      "F1 None: [ True  True  True  True  True  True  True]\n",
+      "\n",
+      "\n",
+      "Precision macro: True\n",
+      "Recall macro: True\n",
+      "F1 macro: True\n",
+      "\n",
+      "\n",
+      "Precision micro: True\n",
+      "Recall micro: True\n",
+      "F1 micro: True\n",
+      "\n",
+      "\n",
+      "Precision weighted: False\n",
+      "Recall weighted: True\n",
+      "F1 weighted: False\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-11-8cbb0e59f368>:55: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  f1 = np.nan_to_num(2 * (numerator / denominator))\n",
+      "<ipython-input-11-8cbb0e59f368>:55: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  f1 = np.nan_to_num(2 * (numerator / denominator))\n",
+      "<ipython-input-11-8cbb0e59f368>:55: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  f1 = np.nan_to_num(2 * (numerator / denominator))\n",
+      "<ipython-input-11-8cbb0e59f368>:55: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  f1 = np.nan_to_num(2 * (numerator / denominator))\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
     "average = [None, 'macro', 'micro', 'weighted']\n",
@@ -1330,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "14adbc35",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "dbbca5d1",
    "metadata": {
     "deletable": false,
@@ -1441,7 +1482,7 @@
        "Text(77.92222222222227, 0.5, 'Accuracy Score')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,17 +1494,19 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Don't forget about the `knn_predict` function you wrote!\n",
+    "# Used code from https://www.datacamp.com/tutorial/k-nearest-neighbor-classification-scikit-learn\n",
     "\n",
-    "k_values = [i for i in range (1,31)]\n",
+    "CV = 5\n",
+    "k_values = [i for i in range (1,20)]\n",
     "scores = []\n",
     "\n",
     "\n",
     "for k in k_values:\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "    score = cross_val_score(knn, faults_X, faults_y, cv=5)\n",
+    "    score = cross_val_score(knn, faults_X, faults_y, cv=CV)\n",
     "    scores.append(np.mean(score))\n",
     "    \n",
-    "sns.lineplot(x = k_values, y = scores, marker = 'o')\n",
+    "sns.lineplot(x = k_values, y = scores)\n",
     "plt.xlabel(\"K Values\")\n",
     "plt.ylabel(\"Accuracy Score\")"
    ]
@@ -1473,7 +1516,7 @@
    "id": "9ea5290f",
    "metadata": {},
    "source": [
-    "A KNN of 15 gives the highest accuarcy. It takes less time than 33 and gives te same result."
+    "A KNN of 15 gives the highest accuarcy."
    ]
   },
   {
@@ -1538,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "1a29ee92",
    "metadata": {
     "deletable": false,
@@ -1553,20 +1596,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Majority class\n",
     "from scipy.stats import mode # what does this function return, how can you use it?\n",
     "\n",
     "def majority_class(input_labels, test_size):\n",
-    "    output_labels = []\n",
-    "    #WRITE YOUR CODE HERE\n",
-    "    return np.array(output_labels)\n"
+    "    '''Always choose the majority class'''\n",
+    "    \n",
+    "    output_labels = mode(input_labels)[0]\n",
+    "    output_labels = np.tile(output_labels, test_size)\n",
+    "    \n",
+    "    return np.array(output_labels)\n",
+    "\n",
+    "majority_class(test_y, test_size=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "ac37c03c",
    "metadata": {
     "deletable": false,
@@ -1583,27 +1643,14 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "\nItems are not equal:\n ACTUAL: 0\n DESIRED: 20",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43massert_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmajority_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\ML\\lib\\site-packages\\numpy\\testing\\_private\\utils.py:425\u001b[0m, in \u001b[0;36massert_equal\u001b[1;34m(actual, desired, err_msg, verbose)\u001b[0m\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    423\u001b[0m     \u001b[38;5;66;03m# Explicitly use __eq__ for comparison, gh-2552\u001b[39;00m\n\u001b[0;32m    424\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (desired \u001b[38;5;241m==\u001b[39m actual):\n\u001b[1;32m--> 425\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(msg)\n\u001b[0;32m    427\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mDeprecationWarning\u001b[39;00m, \u001b[38;5;167;01mFutureWarning\u001b[39;00m) \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    428\u001b[0m     \u001b[38;5;66;03m# this handles the case when the two types are not even comparable\u001b[39;00m\n\u001b[0;32m    429\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124melementwise == comparison\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m e\u001b[38;5;241m.\u001b[39margs[\u001b[38;5;241m0\u001b[39m]:\n",
-      "\u001b[1;31mAssertionError\u001b[0m: \nItems are not equal:\n ACTUAL: 0\n DESIRED: 20"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert_equal(len(majority_class([0, 1, 0, 1], test_size=20)), 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "59803a59-91b3-4303-ad69-c1269f46c4a2",
    "metadata": {
     "deletable": false,
@@ -1619,19 +1666,35 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 1, 0, 6, 0, 4, 2, 1, 3, 2, 3, 1, 1, 5, 6, 3, 3, 2, 6])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from numpy.random import randint\n",
     "\n",
     "def random(input_labels, test_size): \n",
-    "    output_labels = []\n",
-    "    #WRITE YOUR CODE HERE\n",
-    "    return np.array(output_labels)"
+    "    '''With  𝐶 classes, let each class have  1/𝐶 chance.'''\n",
+    "    \n",
+    "    labels = np.unique(input_labels)\n",
+    "    output_labels = np.random.randint(labels[-1] + 1, size=test_size)\n",
+    "    \n",
+    "    return np.array(output_labels)\n",
+    "\n",
+    "random(test_y, test_size=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "082868be",
    "metadata": {
     "deletable": false,
@@ -1655,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "1c95a5ad",
    "metadata": {
     "deletable": false,
@@ -1670,7 +1733,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 6, 2, 2, 6, 1, 5, 5, 5, 5, 6, 6, 5, 5, 1, 2, 6, 1, 3, 6])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Hint: have a look at the numpy.random.choice function with a distribution\n",
     "# Another hint: you can get counts of unique values with np.unique (look at the documentation)\n",
@@ -1678,14 +1752,24 @@
     "from numpy.random import choice\n",
     "\n",
     "def weighted_random(input_labels, test_size):\n",
-    "    output_labels = []\n",
-    "    #WRITE YOUR CODE HERE\n",
-    "    return np.array(output_labels)"
+    "    '''Let each class have  𝑃(𝐶) chance. 𝑃(𝐶) = fraction of C-instances in the population'''\n",
+    "    # count all the labels\n",
+    "    labels, counts = np.unique(input_labels, return_counts=True)\n",
+    "    label_count = dict(zip(labels, counts))\n",
+    "    \n",
+    "    # calculate weight\n",
+    "    weighted = [(label_count[i] / len(input_labels)) for i in label_count]\n",
+    "    \n",
+    "    output_labels = np.random.choice(labels[-1] + 1, size=test_size, p=weighted)\n",
+    "    \n",
+    "    return np.array(output_labels)\n",
+    "\n",
+    "weighted_random(test_y, test_size=20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "1a685306",
    "metadata": {
     "deletable": false,
@@ -1731,6 +1815,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9941b5dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "id": "25af52c3",
    "metadata": {
     "deletable": false,
@@ -1746,9 +1840,66 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╒══════════════════╤══════════╤═══════════════════╕\n",
+      "│   majority class │   random │   weighted random │\n",
+      "╞══════════════════╪══════════╪═══════════════════╡\n",
+      "│             6.00 │     5.00 │              5.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     6.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     2.00 │              1.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     0.00 │              1.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     5.00 │              5.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     2.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     1.00 │              2.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     4.00 │              2.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     4.00 │              2.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     5.00 │              5.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     5.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     0.00 │              2.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     0.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     6.00 │              2.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     3.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     2.00 │              5.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     2.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     6.00 │              6.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     0.00 │              0.00 │\n",
+      "├──────────────────┼──────────┼───────────────────┤\n",
+      "│             6.00 │     6.00 │              6.00 │\n",
+      "╘══════════════════╧══════════╧═══════════════════╛\n"
+     ]
+    }
+   ],
    "source": [
-    "#WRITE YOUR CODE HERE"
+    "from tabulate import tabulate\n",
+    "\n",
+    "row_head=['majority class', 'random', 'weighted random']\n",
+    "merged_array = np.array([majority_class(test_y, test_size=20), random(test_y, test_size=20),\n",
+    "                         weighted_random(test_y, test_size=20)]).T\n",
+    "\n",
+    "table = tabulate(merged_array , row_head, tablefmt=\"fancy_grid\")\n",
+    "print(table)"
    ]
   },
   {
