added normalization to week 1 of the theory

--- a/Week4/theory.ipynb
+++ b/Week4/theory.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "98b11d4f",
    "metadata": {
     "slideshow": {
@@ -391,7 +391,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7a255adc",
    "metadata": {
@@ -526,7 +525,34 @@
     }
    },
    "source": [
-    "### Normaliseren"
+    "### Normaliseren & Standaardiseren \n",
+    "Normaliseren en standaardiseren wordt de data in dezelfde vorm gezet. Dit kan op verschillende manieren gedaan worden. \n",
+    "\n",
+    "z-score =  elke kolom krijgt een gemiddelde van 0 en de standaard deviatie wordt 1.\n",
+    "$$ z-score =  \\frac{x - \\mu}{\\sigma} $$\n",
+    "Hierbij is $\\mu$ het gemiddelde en $\\sigma$ de standaard deviatie\n",
+    "\n",
+    "```\n",
+    "def standardize(M):\n",
+    "    return (M - np.mean(M, axis=0)) / np.std(M, axis=0)\n",
+    "    \n",
+    "         or\n",
+    "         \n",
+    "preprocessing.StandardScaler().fit_transform(X)\n",
+    "```\n",
+    "\n",
+    "Bij Normaliseren worden alle waardes in dezelfde unit gezet. Hierbij is de lengte van twee vectoren gelijk aan 1. $\\sqrt{v \\cdot v} = 1$. Bij het normalizeren wordt de volgende formule gebruikt:\n",
+    "$$ X_{normalize} = \\frac{X - X_{minimum}}{X_{minimum} - X_{minimum}} $$\n",
+    " \n",
+    "```\n",
+    "def normalize(X):    \n",
+    "    norms = np.reshape(np.linalg.norm(X, axis=1), (X.shape[0],1))\n",
+    "    return X / norms\n",
+    "    \n",
+    "         or\n",
+    "         \n",
+    "preprocessing.Normalizer().fit_transform(X)  \n",
+    "```"
    ]
   },
   {
@@ -541,7 +567,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
