added clustering. Next up is DBscan

--- a/Week4/theory.ipynb
+++ b/Week4/theory.ipynb
@@ -556,12 +556,131 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99cc152c",
+   "cell_type": "markdown",
+   "id": "1b6fb186",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aed96186",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Er worden 2 vormen van Unsupervised learning aangehouden.\n",
+    "1. Groeperen/clusteren\n",
+    "    * K-means\n",
+    "    * Agglomarative clustering\n",
+    "    * DBSCAN\n",
+    "2. Versimpelen\n",
+    "    * PCA\n",
+    "    * Matrix factorisatie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30b9892a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Bij het groeperen worden de volgende stappen gebruikt om orde aan te brengen:\n",
+    "1. Bepaal de eisenschappen\n",
+    "2. Bepaal de waardes van deze eigenschappen\n",
+    "3. Leg soort bij soort op basis van similariteitsscore\n",
+    "\n",
+    "Hierbij is k de aantal een groepen. Er is geen overlap tussen de groepen en elk element zit in een groep (partitie)\n",
+    "Je bent klaar als alles in een groep zit en er bij de herschikken niks veranderd.\n",
+    "\n",
+    "```\n",
+    "KMeans(n_clusters=2, random_state=0, n_init=\"auto\").fit(X)\n",
+    "```\n",
+    "\n",
+    "Omdat er in het begin een random groepjes worden gemaakt, is 1 start beter dan de andere.  \n",
+    "Om te vinden welke start beter is wordt er gekeken naar welke sum of variance het kleinste is.  \n",
+    "Sklearn doet het algoritme hierom 10x en pakt de beste.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5f22cfd",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Argmax\n",
+    "\n",
+    "De argmax van een dict $D$ is dat element in $D$ (die sleutel) met de hoogtste waarde in $D$.  \n",
+    "Hierbij wordt er bij argmax dus de index gepakt met de hoogste waarde.\n",
+    "\n",
+    "```\n",
+    "a = array([[10, 11, 12],\n",
+    "           [13, 14, 15]])\n",
+    "       \n",
+    "np.argmax(a)\n",
+    ">> 5\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcbfc9bc",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Andere manieren van clusteren\n",
+    "Er kan ook hierarchisch geclusterd worden. Hierbij kan dit bottom up of top down gedaan worden.  \n",
+    "Bij top down wordt er begonnen met 1 giga cluster die steeds kleiner wordt gemaakt door het op te breken.  \n",
+    "Bij bottom up begint elke waarde in zijn eigen cluster. Elke cluster wordt samengevoegd met een andere cluster die er veel op lijkt.\n",
+    "\n",
+    "### top down\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Hierarchical_clustering_simple_diagram.svg/418px-Hierarchical_clustering_simple_diagram.svg.png)\n",
+    "\n",
+    "### bottom up\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Iris_dendrogram.png/440px-Iris_dendrogram.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "364d7fe4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Afstand tussen 2 clusters\n",
+    "1. Ward: Hierbij worden clusters samengevoegd zodat de variantie het kleinst blijft\n",
+    "2. Average: Hierbij worden clusters samengevoegd waar de gemiddelde afstand het kleinste is\n",
+    "3. Complete: Hierbij worden clusters samengevoegd waar de maximale afstand het kleinste is\n",
+    "\n",
+    "Bij agglomerative clustering kan hier dus een van de volgende manieren clusters gevorm worden.\n",
+    "```\n",
+    "X = np.array([[1, 2], [1, 4], [1, 0],\n",
+    "              [4, 2], [4, 4], [4, 0]])\n",
+    "clustering = AgglomerativeClustering(linkage=\"Ward, Average or Complete\").fit(X)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59055bfa",
+   "metadata": {},
+   "source": [
+    "### DBscan"
+   ]
   }
  ],
  "metadata": {
