--- a/Week2/Week2_T1.ipynb
+++ b/Week2/Week2_T1.ipynb
@@ -9,8 +9,17 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
+    "!jupyter nbconvert Week2_T1.ipynb --to slides --post serve\n",
     "import pandas as pd"
    ]
   },
@@ -1027,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fa2ec634",
    "metadata": {
     "slideshow": {
@@ -1036,12 +1045,19 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['gaaf', 'stom', 'suf', 'saai'])\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "{3}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2216,7 +2232,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
