--- a/Week4/theory.ipynb
+++ b/Week4/theory.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "38ef15ab",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert theory.ipynb --to slides --post serve"
    ]
@@ -31,7 +39,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from  sklearn import linear_model\n",
-    "from sklearn import datasets\n"
+    "from sklearn import datasets"
    ]
   },
   {
@@ -72,7 +80,8 @@
     }
    },
    "source": [
-    "# Week 1\n"
+    "# Week 1\n",
+    "## Introductie en supervised learning"
    ]
   },
   {
@@ -530,7 +539,8 @@
     }
    },
    "source": [
-    "# Week 2"
+    "# Week 2\n",
+    "## Unsupervised learning"
    ]
   },
   {
@@ -603,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4362d772",
+   "id": "1278e336",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -685,6 +695,8 @@
    },
    "source": [
     "### DBscan\n",
+    "\"Poor man algoritme\" omdat er geen labels gemaakt hoeften te worden.\n",
+    "\n",
     "Bij DBscan worden er clusters gevormd op basis van hoe dicht notes bij elkaar staan. Hierbij is het voordeel dat er geen $k$ berekend hoeft te worden.  \n",
     "\n",
     "De ruimte is opgedeeld in *dense regions* waar de core points in zitten.  \n",
@@ -702,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb49452b",
+   "id": "64e2fab8",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -740,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfde208e",
+   "id": "30507803",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -752,8 +764,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9af9478c",
+   "execution_count": 12,
+   "id": "452376fa",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -791,8 +803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6775dd5a",
+   "execution_count": 13,
+   "id": "f859a4a8",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -809,7 +821,7 @@
        "       [ 3.93530207, -1.94807157]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,8 +834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8080d2d3",
+   "execution_count": 14,
+   "id": "46aae6d0",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -851,8 +863,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "74941511",
+   "execution_count": 15,
+   "id": "7dd941f4",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -876,12 +888,112 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3653e074",
+   "cell_type": "markdown",
+   "id": "7d36cbe5",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 3\n",
+    "## Evaluatie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e023f46",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Bij Evaluatie kijk je hoe goed je geleerde (getrainde) model generaliseert naar nieuwe voorbeelden.  \n",
+    "Hierbij is een model goed gegeneraliseerd, als het een accurate voorspelling kan maken op nog niet geziende data.  \n",
+    "Je moet dus niet gaan testen op voorbeelden die je al gezien hebt.  \n",
+    "\n",
+    "Als je gaat test op je training data kan het voorkomen dat er over-fitting plaatst vind en het algoritme niet goed werkt op nieuwe voorbeelden.  \n",
+    "\n",
+    "```\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
+    "```\n",
+    "\n",
+    "Soms wordt er ook een validatieset gemaakt waarop de hyperparameters getest kunnen worden.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6768f859",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 2 class confusion matrix\n",
+    "![](https://www.researchgate.net/profile/Xiaoxuan-Liu-9/publication/339224791/figure/fig2/AS:859521383673858@1581937275642/Overview-of-confusion-matrix-contingency-table-Differences-in-nomenclature-for-machine.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7321e9b3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Hierbij is:\n",
+    "* TP: Het aantal als spam aangegeven mails die wel spam zijn\n",
+    "* FP: Het aantal als spam aangegeven mails die niet spam zijn.\n",
+    "* FN: Het aantal als niet spam aangegeven mails die wel spam zijn.\n",
+    "* TN: Het aantal als niet spam aangegeven mails die niet spam zijn.\n",
+    "\n",
+    "X-as is de echte waarde  \n",
+    "Y-as is de voorspelde waarde  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b2d2c2e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Accuracy: laat een percentage zien van hoeveel van de voorspellingen goed zijn. Hierdoor mis je wel het gehele plaatje.\n",
+    "* Recall: Hoeveel van de spam heb je als spam gemeld.\n",
+    "* Precision: Hoeveel van de als spam gemelde mails zijn ook echt spam.\n",
+    "* F1 score: Is een score dat Recall en Precision samenvoegd. Het wordt ook wel het harmonisch gemiddelde genoemd. \n",
+    "\n",
+    "$$ Recall = \\frac{TP}{TP + FN} $$  \n",
+    "$$ Precision = \\frac{TP}{TP + FP} $$  \n",
+    "$$ Accuracy = \\frac{Totaal goed voorspelde}{Alles} $$  \n",
+    "$$ F1 score = 2 * \\frac{Precision * Recall}{Precision + Recall}$$\n",
+    "\n",
+    "Accuracy is een goede matrix als je een gelijke distributie hebt over de classes. Hierbij klinkt een percentage van 99% erg goed, maar er kunnen nog haken en ogen aan zitten. De verdeling moet dus wel goed liggen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8699cd69",
+   "metadata": {},
+   "source": [
+    "### Multiclass confusion matrix\n",
+    "$$ Recall = \\frac{|Diagonaal|}{|Kolommen|} $$  \n",
+    "$$ Precision = \\frac{|Diagonaal|}{|Rijen|} $$  \n",
+    "$$ Accuracy = \\frac{|Diagonaal|}{|Totaal|} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97225562",
+   "metadata": {},
+   "source": [
+    "### f1-score\n",
+    "* Marco mean: Elke class is gelijk\n",
+    "* Weighted mean: Weging op basis van de hoeveelheid\n",
+    "* Micro mean: diagonaal / alles\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
