--- a/Week4/theory.ipynb
+++ b/Week4/theory.ipynb
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca777b39",
+   "id": "ac5697e2",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01d57a87",
+   "id": "640ebd2d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e8a9663",
+   "id": "35889962",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "96f494f1",
+   "id": "df18d3c6",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b10fb0f8",
+   "id": "51567e37",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "63e7c85e",
+   "id": "690c6a6f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4780a32a",
+   "id": "c3822f60",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5214986",
+   "id": "25ac4e11",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7170495a",
+   "id": "c866c88c",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "632b3780",
+   "id": "45c0469a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a2d60a4",
+   "id": "80ef92d3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81f64e1",
+   "id": "583a017f",
    "metadata": {},
    "source": [
     "* Accuracy: laat een percentage zien van hoeveel van de voorspellingen goed zijn. Hierdoor mis je wel het gehele plaatje.\n",
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2958c341",
+   "id": "1c552d79",
    "metadata": {},
    "source": [
     "### Multiclass confusion matrix\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5c5c68",
+   "id": "63a33cdc",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "18978c6c",
+   "id": "b843a7ee",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1065,8 +1065,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16139836",
-   "metadata": {},
+   "id": "0fe5ba5c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Baseline\n",
     "Een baseline is een classifier die \"geleerd\" is op basis van globale informatie. Hierbij is het gebaseerd op een vooroordeel.\n",
@@ -1084,9 +1088,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbd37a6e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### RMSE en $R^2$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a067aad0",
+   "id": "0c2998f3",
    "metadata": {},
    "outputs": [],
    "source": []
