Added week 5 of theory

--- a/Week5/Week5_T1.ipynb
+++ b/Week5/Week5_T1.ipynb
@@ -288,7 +288,8 @@
     "* Now find at which $x$, $f'(x)=0$. That is the minimal point of a quadratic function.\n",
     "* Thus $4x+4=0$ exactly when $x=-1$. And at that point $y=f(x)= 2(-1)^2+ 4\\cdot -1 -6$. That equals $-8$.\n",
     "\n",
-    "![](../img/quadratic_function.gif)  "
+    "![](../img/quadratic_function.gif)  \n",
+    "![image.png](https://www.mathportal.org/math-tests/quadratic-equation-tests/graph-and-discriminant/1-2.png)"
    ]
   },
   {
