--- a/Week7/AssignmentWeek7.ipynb
+++ b/Week7/AssignmentWeek7.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a2f0f2d1",
    "metadata": {
@@ -34,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfa024ae",
    "metadata": {},
@@ -56,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "134ed3e5",
    "metadata": {
@@ -81,6 +84,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5fc0a944",
    "metadata": {
@@ -154,6 +158,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ef5c9e9",
    "metadata": {
@@ -400,6 +405,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30b7c12c",
    "metadata": {
@@ -428,6 +434,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5a79a428",
    "metadata": {
@@ -448,6 +455,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b51702b0",
    "metadata": {},
@@ -488,8 +496,7 @@
     "# There is 1 output layer, so 100 + 1 = 101\n",
     "# The correct number of parameters will be the sum: 10,100 + 101 = 10,201\n",
     "\n",
-    "correct_number_of_parameters= 10200\n",
-    "correct_number_of_parameters"
+    "correct_number_of_parameters= 10201"
    ]
   },
   {
@@ -517,6 +524,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5603dc88",
    "metadata": {
@@ -543,19 +551,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "4c92b124",
    "metadata": {},
    "outputs": [],
    "source": [
     "input_node = 33\n",
     "hidden_layers = 15\n",
-    "hidden_nodes = 78"
+    "hidden_nodes = 78\n",
+    "bias_term = 1\n",
+    "end_nodes = 78"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "ce60e382",
    "metadata": {
     "deletable": false,
@@ -574,16 +584,19 @@
     {
      "data": {
       "text/plain": [
-       "39858"
+       "95161"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v15_78 = ((33 * 78) * 15) + (78 * 1) + (1 * (78 * 15))\n",
+    "# 34 = input_node + bias_term\n",
+    "# 14 = because you are taking out the first layer with 33 input nodes, which you count already.\n",
+    "# 79 = hidden_nodes + bias_term\n",
+    "v15_78 = (34 * 78) + (14 * (79 * 78)) + 79\n",
     "v15_78"
    ]
   },
@@ -611,6 +624,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "92123991",
    "metadata": {
@@ -632,6 +646,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a10e0ed3",
    "metadata": {
@@ -655,6 +670,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "21383c77",
    "metadata": {
@@ -758,6 +774,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "770aa2ad",
    "metadata": {
@@ -795,6 +812,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29a4c9e5",
    "metadata": {
@@ -816,6 +834,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8148a0f4",
    "metadata": {
@@ -836,6 +855,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "55716ba7",
    "metadata": {
@@ -857,6 +877,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be480632",
    "metadata": {
@@ -949,6 +970,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8c74979a",
    "metadata": {
@@ -1059,6 +1081,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ec9a8ae8",
    "metadata": {},
@@ -1160,6 +1183,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6937f127",
    "metadata": {},
@@ -1330,6 +1354,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "80ed5e9f",
    "metadata": {
@@ -1358,6 +1383,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "93a1837b",
    "metadata": {
@@ -1607,6 +1633,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4b260a87",
    "metadata": {
@@ -1719,6 +1746,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fb855e91",
    "metadata": {
@@ -1814,6 +1842,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50a7b798",
    "metadata": {
@@ -1938,6 +1967,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0ef760b9",
    "metadata": {
@@ -2133,6 +2163,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "120a5e80",
    "metadata": {
@@ -2284,6 +2315,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cdf2ada0",
    "metadata": {},
