update to larger neural networks

--- a/Week7/AssignmentWeek7.ipynb
+++ b/Week7/AssignmentWeek7.ipynb
@@ -25,13 +25,13 @@
     "* je emails: hetzelfde: scheidt met `,`\n",
     "* voor je groep: **alleen de hoofdletter** (iets als  `A` of `B` dus)\n",
     "\n",
-    "__Namen__: \n",
+    "__Namen__: Melle Koers, Tycho Stam, \n",
     "\n",
-    "__Emails__: \n",
+    "__Emails__: melle.koers@student.uva.nl, tycho.stam@student.uva.nl\n",
     "\n",
-    "__Student ids__ : \n",
+    "__Student ids__ : 13955071, 13303147\n",
     "\n",
-    "__Groep__ : VervangMijDoorEenHoofdletter"
+    "__Groep__ : B"
    ]
   },
   {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "9dd93bde",
    "metadata": {
     "deletable": false,
@@ -479,18 +479,7 @@
      "solution": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10200"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# There are 100 hidden units, so 10,000 + 100 = 10,100\n",
     "# There is 1 output layer, so 100 + 1 = 101\n",
@@ -565,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ce60e382",
    "metadata": {
     "deletable": false,
@@ -584,10 +573,10 @@
     {
      "data": {
       "text/plain": [
-       "95161"
+       "88999"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
